fixed overflow

--- a/src/styles/Landing.module.scss
+++ b/src/styles/Landing.module.scss
@@ -396,7 +396,7 @@ main {
     gap: 2rem;
     .imgWrapper {
       flex: 1;
-      display: flex;
+      // display: flex;
       img {
         max-width: 100%;
       }
@@ -576,6 +576,16 @@ main {
   .faqSection {
     .container {
       grid-template-columns: 1fr;
+      .faqWrapper {
+        // background-color: red;
+        padding-left: 0;
+        max-width: 90vw;
+        .content {
+          .inputs {
+            grid-template-columns: 1fr;
+          }
+        }
+      }
     }
   }
 }
